syntax = "proto3";
import "Feedback.proto";

option java_multiple_files = true;
option java_package = "sep3.project.protobuf";
option java_outer_classname = "HandInHomeworkProto";

message HandInHomework{
  optional string id = 1;
  string answer = 2;
  string studentUsername = 3;
  optional Feedback feedback= 4;
}
message RequestCreateHandInHomework{
  string homeworkId = 1;
  string studentUsername = 2;
  string answer = 3;
}
message ResponseGetHandInHomework{
  HandInHomework handInHomework = 1;
}
message RequestGetHandInHomework{
  string handInHomeworkId = 1;
}
message RequestGetHandInByHomeworkIdAndStudentUsername{
  string homeworkId = 1;
  string studentUsername = 2;
}
message RequestGetHandInsByHomeworkId{
  string homeworkId = 1;
}
message ResponseGetHandInsByHomeworkId{
  repeated HandInHomework handIns = 1;
}

service HandInHomeworkService{
  rpc handInHomework(RequestCreateHandInHomework) returns (ResponseGetHandInHomework);
  rpc getHandInById(RequestGetHandInHomework) returns (ResponseGetHandInHomework);
  rpc getHandInByHomeworkIdAndStudentUsername (RequestGetHandInByHomeworkIdAndStudentUsername) returns (ResponseGetHandInHomework);
  rpc getHandInsByHomeworkId(RequestGetHandInsByHomeworkId) returns (ResponseGetHandInsByHomeworkId);
}